# incan

./: .gitignore  .markdownlint-cli2.yaml  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  deny.toml  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  chore.yml  config.yml  documentation.yml  feature_request.yml  rfc_proposal.yml
.github/workflows/: ci.yml  docs_site_deploy.yml  issue_auto_label.yml  vscode_vsix_release.yml
assets/: logo.txt
benchmarks/: README.md  check_incan.sh  run_all.sh
benchmarks/results/: results.md
crates/: README.md
crates/incan_core/: Cargo.toml
crates/incan_derive/: Cargo.toml  README.md
crates/incan_derive/src/: lib.rs
crates/incan_semantics/: Cargo.toml
crates/incan_stdlib/: Cargo.toml  README.md
crates/incan_stdlib/src/: collections.rs  conversions.rs  errors.rs  frozen.rs  iter.rs  json.rs  lib.rs  num.rs  prelude.rs  reflection.rs  strings.rs  testing.rs  web.rs
crates/incan_stdlib/tests/: errors.rs
crates/incan_syntax/: Cargo.toml
crates/incan_syntax/src/: ast.rs  diagnostics.rs  lib.rs  parser.rs  token_helpers.rs
crates/incan_syntax/src/lexer/: indent.rs  mod.rs  numbers.rs  strings.rs  tokens.rs
crates/incan_syntax/src/parser/: api.rs  core.rs  decl.rs  expr.rs  helpers.rs  stmts.rs  tests.rs  types.rs  util.rs
dev/: 404.html  index.html
dev/RFCs/: index.html
dev/contributing/: index.html
dev/language/: index.html
dev/release_notes/: index.html
dev/roadmap/: index.html
dev/search/: search_index.json
dev/stability/: index.html
dev/start_here/: index.html
dev/stylesheets/: pygments.css
dev/tags/: index.html
dev/tooling/: index.html
docs/: README.md  ROADMAP.md  architecture.md
docs/RFCs/: 000_core_rfc.md  001_test_fixtures.md  002_test_parametrize.md  003_frontend_wasm.md  004_async_fixtures.md  005_rust_interop.md  006_generators.md  007_inline_tests.md  008_const_bindings.md  009_sized_integers.md  010_tempfile.md  011_fstring_error_spans.md  012_json_value.md  013_rust_crate_dependencies.md  014_generated_code_error_handling.md  014_loop_optimization.md  015_hatch_like_tooling.md  016_loop_and_break_value.md  TEMPLATE.md
docs/contributing/: README.md  architecture.md  extending_language.md  layering.md  readable-maintainable-rust.md
docs/guide/: README.md  async_programming.md  closures.md  consts.md  derives_and_traits.md  enums.md  error_handling.md  error_messages.md  file_io.md  imports_and_modules.md  models_and_classes.md  numeric_semantics.md  performance.md  rust_interop.md  scopes_and_name_resolution.md  strings.md  web_framework.md
docs/implementation_plans/: lexer_refactor.md
docs/reference/: language.md
docs/tooling/: editor_setup.md  formatting.md  getting_started.md  lsp.md  testing.md
editors/vscode/: README.md  incan.tmLanguage.json  package-lock.json  package.json
examples/: consts.incn
examples/advanced/: async_await.incn  async_channels.incn  async_sync.incn  async_tasks.incn  bytes_io.incn  custom_traits.incn  derives_and_json.incn  dunder_and_traits.incn  file_io.incn  iterators.incn  json_example.incn  membership_ops.incn  type_conversions.incn  using_rust_crates.incn
examples/simple/: factorial.incn  fib.incn  hello.incn  model_demo.incn  strings.incn
examples/web/: hello_web.incn
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: parse.rs
scripts/: run_examples.sh
src/: lib.rs  main.rs  numeric.rs  numeric_adapters.rs  version.rs
src/backend/: mod.rs  project.rs  rust_emitter.rs
src/cli/: commands.rs  mod.rs  prelude.rs  test_interfaces.rs  test_runner.rs  test_runner_interfaces.rs
src/format/: config.rs  formatter.rs  mod.rs  writer.rs
src/frontend/: DEVNOTES.md  ast.rs  diagnostics.rs  lexer.rs  mod.rs  module.rs  parser.rs  resolver.rs  symbols.rs  typechecker.rs
src/lsp/: backend.rs  diagnostics.rs  mod.rs
stdlib/: math.incn  prelude.incn  testing.incn  zen.txt
stdlib/async/: channel.incn  prelude.incn  select.incn  sync.incn  task.incn  time.incn
stdlib/derives/: comparison.incn  copying.incn  string.incn
stdlib/serde/: json.incn
stdlib/web/: app.incn  prelude.incn  request.incn  response.incn  routing.incn
tests/: codegen_snapshot_tests.rs  construction_diagnostics_tests.rs  integration_tests.rs  layering_guard.rs  lowering_error_propagation.rs  property_tests.proptest-regressions  property_tests.rs  semantic_core_parity.rs  semantic_core_parity_strings.rs  test_example.incn  vocab_guardrails.rs
tests/codegen_snapshots/: assignments.incn  basic_function.incn  builtins.incn  classes.incn  collections.incn  const_bytes.incn  const_str_chain.incn  constructor_field_defaults.incn  consts.incn  control_flow.incn  dict_operations.incn  enums.incn  function_calls.incn  functions.incn  imports.incn  inferred_reassign.incn  literals.incn  loops.incn  lowercase_types.incn  match_statements.incn  mixed_numeric.incn  model_struct.incn  models.incn  newtype_checked_construction.incn  operators.incn  param_mut_unused.incn  patterns.incn  pub_const.incn  returns.incn  rust_interop_associated_functions.incn  string_operations.incn  titlecase_var_not_type.incn  traits.incn  type_annotations.incn
tests/fixtures/: repro_model_traits.incn  test_assert_canary.incn
tests/snapshots/: codegen_snapshot_tests__assignments.snap  codegen_snapshot_tests__basic_function.snap  codegen_snapshot_tests__builtins.snap  codegen_snapshot_tests__classes.snap  codegen_snapshot_tests__collections.snap  codegen_snapshot_tests__const_bytes.snap  codegen_snapshot_tests__const_str_chain.snap  codegen_snapshot_tests__constructor_field_defaults.snap  codegen_snapshot_tests__consts.snap  codegen_snapshot_tests__control_flow.snap  codegen_snapshot_tests__dict_operations.snap  codegen_snapshot_tests__enums.snap  (+22 more)
(+364 files in other folders)
