[package]
name = "incan"
description = "The Incan programming language compiler"
version = "0.1.0-alpha.1"
license-file = "LICENSE"
readme = "README.md"
edition = "2024"  # Rust 2024 edition
repository = "https://github.com/dannys-code-corner/incan-programming-language"
homepage = "https://github.com/dannys-code-corner/incan-programming-language"
keywords = ["programming-language", "compiler", "rust", "python"]
categories = ["compilers", "development-tools"]
authors = ["Danny Meijer <dannys.code.corner@gmail.com>"]

[dependencies]
# LSP server implementation
tower-lsp = "0.17"  # TODO: update to latest version
# Async runtime (for LSP and generated async code)
tokio = { version = "1", features = ["full"] }
# JSON serialization (for LSP protocol)
serde_json = "1.0"
# Perfect hash map for keyword lookup
phf = { version = "0.11", features = ["macros"] }

[dev-dependencies]
pretty_assertions = "1.4"

[[bin]]
name = "incan"
path = "src/main.rs"

[[bin]]
name = "incan-lsp"
path = "src/bin/lsp.rs"

[lib]
name = "incan"
path = "src/lib.rs"
