[package]
name = "incan_derive"
version = "0.1.0-alpha.1"
edition = "2024"
description = "Derive macros for the Incan programming language standard library"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
