[package]
name = "incan_stdlib"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Standard library for Incan-generated Rust code"

[dependencies]
incan_derive = { path = "../incan_derive" }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[features]
default = []
json = ["dep:serde", "dep:serde_json"]
