[package]
name = "incan_stdlib"
version = "0.1.0-alpha.2"
edition = "2021"
description = "Standard library for Incan-generated Rust code"
license = "Apache-2.0"

[dependencies]
incan_derive = { path = "../incan_derive" }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[features]
default = []
json = ["dep:serde", "dep:serde_json"]
