[package]
name = "incan_stdlib"
description = "Standard library for Incan-generated Rust code"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
incan_derive = { path = "../incan_derive" }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[features]
default = []
json = ["dep:serde", "dep:serde_json"]
